--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,19 @@ add_executable(exemplo01
         exemplo01.c
         exemplo01_test.c)
 
+
+add_executable(tipos_variaveis
+        tipos_variaveis.c)
+
+add_executable(condicionais
+        condicionais.c)
+
+add_executable(scanfPrintf
+        scanfPrintf.c)
+
 add_executable(exemplo02
         exemplo02.c)
-add_executable(condicionais condicionais_exemplo.c
-        operador_atribuicao.c)
 
 add_executable(operador_atribuicao
         operador_atribuicao.c)
+
