--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,15 @@ add_executable(tipos_variaveis
 add_executable(condicionais
         condicionais.c)
 
-add_executable(scanfPrintf
-        scanfPrintf.c)
+add_executable(scanf_printf
+        scanf_printf.c)
 
 add_executable(exemplo02
         exemplo02.c)
 
 add_executable(operador_atribuicao
         operador_atribuicao.c)
+
+add_executable(arg_linha_comando
+        argumentos_linha_comando.c)
 
