--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,5 @@ add_executable(operador_atribuicao
 add_executable(arg_linha_comando
         argumentos_linha_comando.c)
 
+add_executable(funcoes
+        funcoes.c)
