--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,9 @@ add_executable(arg_linha_comando
 
 add_executable(funcoes
         funcoes.c)
+
+add_executable(arg_referencia
+        arg_referencia.c)
+
+add_executable(recursao
+        recursao.c)
