--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,3 +74,6 @@ add_executable(arquivos_binarios
 
 add_executable(repeticao
         "${EXEMPLOS_DIR}/Estruturas de Iteracao e Controle/estruturas_repeticao.c")
+
+add_executable(controle_fluxo
+        "${EXEMPLOS_DIR}/Estruturas de Iteracao e Controle/controle_fluxo.c")
